r6-be-003 add operational resolution queue endpoint
